--- a/css/style.css
+++ b/css/style.css
@@ -406,54 +406,156 @@ button {
         color: #cc3300;
         margin-right: 8px; }
 
-.alimentacao {
-  height: 100vh; }
-  .alimentacao .title {
+.alimentacao .title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 8px; }
+.alimentacao .subtitle {
+  text-align: center;
+  margin: 0; }
+.alimentacao .food-stores {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  height: 60vh; }
+  .alimentacao .food-stores .slick-list {
+    height: 100%; }
+  .alimentacao .food-stores .slick-prev {
+    margin-left: 32px; }
+  .alimentacao .food-stores .slick-next {
+    margin-right: 32px; }
+  .alimentacao .food-stores .store-card {
     text-align: center;
-    font-size: 40px;
-    margin-bottom: 8px; }
-  .alimentacao .subtitle {
-    text-align: center;
-    margin: 0; }
-  .alimentacao .food-stores {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 24px; }
-    .alimentacao .food-stores .slick-prev {
-      margin-left: 32px; }
-    .alimentacao .food-stores .slick-next {
-      margin-right: 32px; }
-    .alimentacao .food-stores .store-card {
-      text-align: center;
-      width: 150px;
-      height: 150px;
+    width: 250px;
+    height: 250px;
+    border-radius: 150px;
+    border: 1px solid #cc3300;
+    padding: 4px; }
+    .alimentacao .food-stores .store-card .store {
+      width: 100%;
+      height: 100%;
       border-radius: 150px;
-      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35); }
-      .alimentacao .food-stores .store-card .store {
-        width: 100%;
-        height: 100%;
-        border-radius: 150px;
-        position: relative; }
-      .alimentacao .food-stores .store-card .store-title {
-        margin-top: 8px;
-        text-transform: uppercase;
-        z-index: 10; }
-  .alimentacao .container {
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid rgba(140, 140, 140, 0.15);
-    border-right: none;
-    border-left: none;
-    padding: 32px;
-    margin-top: 16px; }
-    .alimentacao .container .btn {
-      align-self: center; }
-      .alimentacao .container .btn i {
-        color: #cc3300;
-        margin-right: 8px; }
+      position: relative; }
+    .alimentacao .food-stores .store-card .store-title {
+      margin-top: 16px;
+      margin-bottom: 8px;
+      text-transform: uppercase;
+      z-index: 10;
+      font-size: 16px; }
+    .alimentacao .food-stores .store-card .desc {
+      margin-top: 0; }
+.alimentacao .container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgba(140, 140, 140, 0.15);
+  border-right: none;
+  border-left: none;
+  padding: 32px;
+  margin-top: 16px; }
+  .alimentacao .container .btn {
+    align-self: center; }
+    .alimentacao .container .btn i {
+      color: #cc3300;
+      margin-right: 8px; }
+
+.novidades .title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 8px; }
+.novidades .subtitle {
+  text-align: center;
+  margin: 0; }
+.novidades .news-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  height: 100%; }
+  .novidades .news-container .news {
+    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35);
+    border-radius: 12px; }
+  .novidades .news-container .slick-list {
+    height: 100%; }
+  .novidades .news-container .slick-prev {
+    margin-left: 32px; }
+  .novidades .news-container .slick-next {
+    margin-right: 32px; }
+  .novidades .news-container .news-title {
+    margin-top: 16px;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+    z-index: 10;
+    font-size: 16px;
+    text-align: center; }
+  .novidades .news-container .desc {
+    text-align: center;
+    margin-top: 0; }
+.novidades .container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgba(140, 140, 140, 0.15);
+  border-right: none;
+  border-left: none;
+  padding: 32px;
+  margin-top: 16px; }
+  .novidades .container .btn {
+    align-self: center; }
+    .novidades .container .btn i {
+      color: #cc3300;
+      margin-right: 8px; }
+
+.instagram .title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 8px; }
+.instagram .subtitle {
+  text-align: center;
+  margin: 0; }
+.instagram .photos-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  height: 100%; }
+  .instagram .photos-container .photo {
+    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35);
+    border-radius: 12px; }
+  .instagram .photos-container .slick-list {
+    height: 100%; }
+  .instagram .photos-container .slick-prev {
+    margin-left: 32px; }
+  .instagram .photos-container .slick-next {
+    margin-right: 32px; }
+  .instagram .photos-container .photo-title {
+    margin-top: 16px;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+    z-index: 10;
+    font-size: 16px;
+    text-align: center; }
+  .instagram .photos-container .desc {
+    text-align: center;
+    margin-top: 0; }
+.instagram .container {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgba(140, 140, 140, 0.15);
+  border-right: none;
+  border-left: none;
+  padding: 32px;
+  margin-top: 16px; }
+  .instagram .container .btn {
+    align-self: center; }
+    .instagram .container .btn i {
+      color: #cc3300;
+      margin-right: 8px; }
 
 .footer {
   height: 50vh;
