--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -99,7 +99,7 @@
         margin-right: $space-1
 
 .alimentacao
-  height: 100vh  
+  //height: 500px
   .title
     text-align: center
     font-size: 40px
@@ -112,25 +112,33 @@
     justify-content: center
     align-items: center
     margin-top: $space-3
+    height: 60vh
+    .slick-list
+      height: 100%
     .slick-prev
       margin-left: $space-4
     .slick-next
       margin-right: $space-4
     .store-card
       text-align: center
-      width: 150px 
-      height: 150px
+      width: 250px 
+      height: 250px
       border-radius: 150px
-      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)	
+      border: 1px solid $primary
+      padding: 4px
       .store
         width: 100%
         height: 100%
         border-radius: 150px
         position: relative
       .store-title
-        margin-top: $space-1
+        margin-top: $space-2
+        margin-bottom: $space-1
         text-transform: uppercase
         z-index: 10
+        font-size: 16px
+      .desc
+        margin-top: 0
   .container
     width: 90%
     display: flex
@@ -146,6 +154,109 @@
       i
         color: $primary
         margin-right: $space-1
+
+.novidades
+  //height: 100vh
+  // margin-top: $space-10
+  .title
+    text-align: center
+    font-size: 40px
+    margin-bottom: $space-1 
+  .subtitle
+    text-align: center
+    margin: 0
+  .news-container
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: $space-3
+    height: 100%
+    .news
+      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)
+      border-radius: 12px
+    .slick-list
+      height: 100%
+    .slick-prev
+      margin-left: $space-4
+    .slick-next
+      margin-right: $space-4
+    .news-title
+      margin-top: $space-2
+      margin-bottom: $space-1
+      text-transform: uppercase
+      z-index: 10
+      font-size: 16px
+      text-align: center
+    .desc
+      text-align: center
+      margin-top: 0 
+  .container
+    width: 90%
+    display: flex
+    align-items: center
+    justify-content: center
+    border: 2px solid transparentize($gray, .85)
+    border-right: none
+    border-left: none
+    padding: $space-4
+    margin-top: $space-2
+    .btn
+      align-self: center
+      i
+        color: $primary
+        margin-right: $space-1
+
+.instagram
+  //height: 100vh
+  // margin-top: $space-10
+  .title
+    text-align: center
+    font-size: 40px
+    margin-bottom: $space-1 
+  .subtitle
+    text-align: center
+    margin: 0
+  .photos-container
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: $space-3
+    height: 100%
+    .photo
+      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)
+      border-radius: 12px
+    .slick-list
+      height: 100%
+    .slick-prev
+      margin-left: $space-4
+    .slick-next
+      margin-right: $space-4
+    .photo-title
+      margin-top: $space-2
+      margin-bottom: $space-1
+      text-transform: uppercase
+      z-index: 10
+      font-size: 16px
+      text-align: center
+    .desc
+      text-align: center
+      margin-top: 0 
+  .container
+    width: 90%
+    display: flex
+    align-items: center
+    justify-content: center
+    border: 2px solid transparentize($gray, .85)
+    border-right: none
+    border-left: none
+    padding: $space-4
+    margin-top: $space-2
+    .btn
+      align-self: center
+      i
+        color: $primary
+        margin-right: $space-1
+
 .footer
   height: 50vh
   display: block
