--- a/css/style.css
+++ b/css/style.css
@@ -521,26 +521,43 @@ button {
   justify-content: center;
   align-items: center;
   margin-top: 24px;
+  margin-bottom: 24px;
   height: 100%; }
-  .instagram .photos-container .photo {
-    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35);
-    border-radius: 12px; }
-  .instagram .photos-container .slick-list {
-    height: 100%; }
-  .instagram .photos-container .slick-prev {
-    margin-left: 32px; }
-  .instagram .photos-container .slick-next {
-    margin-right: 32px; }
-  .instagram .photos-container .photo-title {
-    margin-top: 16px;
-    margin-bottom: 8px;
-    text-transform: uppercase;
-    z-index: 10;
-    font-size: 16px;
-    text-align: center; }
-  .instagram .photos-container .desc {
-    text-align: center;
-    margin-top: 0; }
+  .instagram .photos-container .photo-card-1 {
+    border-radius: 12px;
+    height: 150px;
+    width: 200px;
+    margin: 0 8px;
+    background-image: url("../img/instagram_1.jpg");
+    background-size: cover; }
+  .instagram .photos-container .photo-card-2 {
+    border-radius: 12px;
+    height: 150px;
+    width: 200px;
+    margin: 0 8px;
+    background-image: url("../img/instagram_2.jpg");
+    background-size: cover; }
+  .instagram .photos-container .photo-card-3 {
+    border-radius: 12px;
+    height: 150px;
+    width: 200px;
+    margin: 0 8px;
+    background-image: url("../img/instagram_3.jpg");
+    background-size: cover; }
+  .instagram .photos-container .photo-card-4 {
+    border-radius: 12px;
+    height: 150px;
+    width: 200px;
+    margin: 0 8px;
+    background-image: url("../img/instagram_4.jpg");
+    background-size: cover; }
+  .instagram .photos-container .photo-card-5 {
+    border-radius: 12px;
+    height: 150px;
+    width: 200px;
+    margin: 0 8px;
+    background-image: url("../img/instagram_5.jpg");
+    background-size: cover; }
 .instagram .container {
   width: 90%;
   display: flex;
@@ -562,7 +579,8 @@ button {
   display: block;
   background-color: #ffffff;
   color: #423f40;
-  position: relative; }
+  position: relative;
+  border-top: 2px solid rgba(140, 140, 140, 0.15); }
   @media only screen and (max-width: 992px) {
     .footer {
       height: unset;
