--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -208,7 +208,7 @@
 
 .instagram
   //height: 100vh
-  // margin-top: $space-10
+  //margin-top: $space-10
   .title
     text-align: center
     font-size: 40px
@@ -221,26 +221,43 @@
     justify-content: center
     align-items: center
     margin-top: $space-3
+    margin-bottom: $space-3
     height: 100%
-    .photo
-      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)
+    .photo-card-1
       border-radius: 12px
-    .slick-list
-      height: 100%
-    .slick-prev
-      margin-left: $space-4
-    .slick-next
-      margin-right: $space-4
-    .photo-title
-      margin-top: $space-2
-      margin-bottom: $space-1
-      text-transform: uppercase
-      z-index: 10
-      font-size: 16px
-      text-align: center
-    .desc
-      text-align: center
-      margin-top: 0 
+      height: 150px
+      width: 200px
+      margin: 0 $space-1
+      background-image: url('../img/instagram_1.jpg')
+      background-size: cover
+    .photo-card-2
+      border-radius: 12px
+      height: 150px
+      width: 200px
+      margin: 0 $space-1
+      background-image: url('../img/instagram_2.jpg')
+      background-size: cover
+    .photo-card-3
+      border-radius: 12px
+      height: 150px
+      width: 200px
+      margin: 0 $space-1
+      background-image: url('../img/instagram_3.jpg')
+      background-size: cover
+    .photo-card-4
+      border-radius: 12px
+      height: 150px
+      width: 200px
+      margin: 0 $space-1
+      background-image: url('../img/instagram_4.jpg')
+      background-size: cover
+    .photo-card-5
+      border-radius: 12px
+      height: 150px
+      width: 200px
+      margin: 0 $space-1
+      background-image: url('../img/instagram_5.jpg')
+      background-size: cover
   .container
     width: 90%
     display: flex
@@ -263,6 +280,7 @@
   background-color: $white
   color: $secondary
   position: relative
+  border-top: 2px solid transparentize($gray, .85)
   @media only screen and (max-width: 992px)
     height: unset
     position: relative
